<resources>
<<<<<<< HEAD
    <string name="app_name">GetHelp!</string>
=======

=======
    <!-- 앱 기본 정보 -->
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674

>>>>>>> main
    <string name="gethelp">GetHelp!</string>
    <string name="key_word">키워드 등록</string>
    <string name="voice_reco">사용자 음성 등록</string>
    <string name="on_off">마이크 ON/OFF</string>
    <string name="history">신고 내역</string>
    <string name="input_keyword">Input Keyword...</string>
    <string name="example">ex: Help, Warning</string>
    <string name="add">추가</string>
    <string name="keyword_limit">키워드 등록은 최대 3개까지 무료로 제공됩니다.</string>
    <string name="extra">결제 및 자세히 보기</string>
    <string name="keyword_list">키워드 리스트</string>
    <string name="edit">편집</string>
    <string name="keyword_1">키워드를 입력하세요...</string>
    <string name="keyword_num">키워드를 입력하세요...n</string>


=======
    <!-- 사용자 정보 입력 화면 -->
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
    <string name="language_prompt">언어 선택</string>
    <string name="notice">정보를 정확히 입력해주세요</string>
    <string name="input_user_info">사용자 정보 입력</string>
    <string name="user_info">사용자 정보</string>
    <string name="user_name">*이름(필수항목)</string>
    <string name="input_user_name">이름을 입력하세요</string>
    <string name="user_phnum">*전화번호(필수항목)</string>
    <string name="numbers">숫자만 입력</string>
    <string name="code">인증번호 받기</string>
    <string name="user_language">*언어(필수항목)</string>
    <string name="birth_gender">*생년월일 및 성별(필수항목)</string>
    <string name="yymmdd">YYMMDD</string>
    <string name="hyphen">-</string>
    <string name="sec">******</string>
    <string name="emergency">긴급연락처(본인 외 연락처)</string>
    <string name="em_name">이름</string>
    <string name="em_phnum">전화번호</string>
    <string name="relation">관계</string>
    <string name="complete">완료</string>
    <string name="hamburger">☰</string>
    <string name="user_info_test">사용자 이름: 홍길동\n전화번호: 010-1234-5678</string>
    <string name="warning">허위로 신고한 경우, 관계 법령에 따라 형사 처벌 또는 민사상 손해배상의 책임을 질 수 있습니다.
(형법 제156조 허위 신고죄, 경범죄처벌법 제3조 제1항 제1호에 의거)</string>
    <string name="banner">광고 배너</string>

    <string name="admin_mode">관리자 모드</string>
    <string name="admin_user">사용자 및 키워드 관리</string>
    <string name="search_record">긴급 신고 기록 조회</string>
    <string name="admin_phnum">긴급 연락처 관리</string>
    <string name="check_server_model">서버 및 모델 점검</string>
    <string name="accuracy">인식 정확도 통계</string>
    <string name="app_setting">앱 설정 변경</string>
    <string name="delete_voice">등록한 음성 삭제</string>
    <string name="last_register">마지막 등록: -</string>
    <string name="notice_voice">사용자 음성 유사도 측정을 위해 음성을 4회 등록합니다</string>

    <string name="voice_start">녹음 시작</string>


    <!-- 관리자 화면(admin)용 -->
    <string name="admin_mode">관리자 모드</string>
    <string name="admin_user">사용자/키워드 관리</string>
    <string name="search_record">긴급 신고 기록 조회</string>
    <string name="admin_phnum">긴급 연락처 관리</string>
    <string name="check_server_model">서버 및 모델 점검</string>
    <string name="accuracy">정확도 통계 보기</string>
    <string name="app_setting">앱 설정 변경</string>

    <!-- 음성 등록 관련 -->
    <string name="delete_voice">등록한 음성 삭제</string>
    <string name="last_register">마지막 등록: -</string>
    <string name="notice_voice">사용자 음성 유사도 측정을 위해 음성을 4회 등록합니다</string>
    <string name="voice_start">녹음 시작</string>

    <!-- 기타 -->
>>>>>>> main
    <string name="back">←</string>
    <string name="input_code">인증번호 입력</string>
    <string name="code_notice">입력하신 전화번호로 발송된 인증번호를 입력하세요</string>
    <string name="code_require">인증 요청</string>

    <string name="delete_chosen">선택 삭제</string>
=======

    <!-- 언어 리스트 -->
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
>>>>>>> main
    <string-array name="language_list">
        <item>한국어</item>
        <item>영어</item>
        <item>일본어</item>
        <item>중국어</item>
    </string-array>

<<<<<<< HEAD
=======
    <!-- 관계 리스트 -->
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
    <string-array name="relationship_list">
        <item>선택</item>
        <item>아빠</item>
        <item>엄마</item>
        <item>형제자매</item>
        <item>친구</item>
        <item>아내</item>
        <item>남편</item>
        <item>친척</item>
        <item>할머니</item>
        <item>할아버지</item>
        <item>자녀</item>
        <item>기타</item>
    </string-array>

<<<<<<< HEAD
</resources>
=======
</resources>
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
