<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- 안내 문구 -->
        <TextView
            android:id="@+id/tv_intro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 네이비 제목 바 -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#001F54"
            android:padding="12dp"
            android:text="@string/input_user_info"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_intro" />

        <!-- 사용자 정보 입력 -->
        <LinearLayout
            android:id="@+id/layout_user_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- 이름 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="#800020"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/plain_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_user_name"
                android:inputType="text"
                android:minHeight="48dp" />

            <!-- 전화번호 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_phnum"
                android:textColor="#800020"
                android:layout_marginTop="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
<<<<<<< HEAD
                    android:id="@+id/phone_text_input"
=======
<<<<<<< HEAD
=======
                    android:id="@+id/phone_text_input"
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
>>>>>>> main
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:hint="@string/numbers"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:minHeight="48dp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:background="@drawable/rounded_button"
                    android:textColor="#FFFFFF"
                    android:text="@string/code" />
            </LinearLayout>

<<<<<<< HEAD
=======
<<<<<<< HEAD
=======
>>>>>>> main
            <!-- 인증번호 입력 + 인증 요청 버튼 -->
            <LinearLayout
                android:id="@+id/layout_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical">

                <!-- 인증번호 입력창 -->
                <EditText
                    android:id="@+id/et_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="@string/input_code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:minHeight="48dp"/>

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"/>

                <!-- 인증 요청 버튼 -->
                <Button
                    android:id="@+id/btn_request_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/code_require"
                    android:background="@drawable/rounded_button"
                    android:textColor="#FFFFFF"
                    android:minHeight="48dp"/>
            </LinearLayout>



<<<<<<< HEAD
=======
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
>>>>>>> main
            <!-- 언어 선택 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_language"
                android:textColor="#800020"
                android:layout_marginTop="12dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_spinner"
                android:entries="@array/language_list"
<<<<<<< HEAD
                android:id="@+id/spinner_language"
=======
<<<<<<< HEAD
=======
                android:id="@+id/spinner_language"
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
>>>>>>> main
                android:prompt="@string/language_prompt" />

            <!-- 생년월일/성별 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_gender"
                android:textColor="#800020"
                android:layout_marginTop="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
<<<<<<< HEAD
                    android:layout_weight="0.5"
                    android:id="@+id/birth"
=======
                    android:layout_weight="0.4"
<<<<<<< HEAD
=======
                    android:id="@+id/birth"
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
>>>>>>> main
                    android:hint="@string/yymmdd"
                    android:inputType="number"
                    android:maxLength="6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hyphen"
                    android:paddingHorizontal="8dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
<<<<<<< HEAD
                    android:id="@+id/gender"
=======
<<<<<<< HEAD
=======
                    android:id="@+id/gender"
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
>>>>>>> main
                    android:inputType="number"
                    android:maxLength="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sec"
                    android:paddingHorizontal="8dp"/>
            </LinearLayout>
        </LinearLayout>

        <!-- 긴급 연락처 입력 -->
        <LinearLayout
            android:id="@+id/layout_emergency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_user_info">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/em_name"
                android:layout_marginTop="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_user_name"
<<<<<<< HEAD
                android:id="@+id/et_emergency_name"
=======
<<<<<<< HEAD
=======
                android:id="@+id/et_emergency_name"
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
>>>>>>> main
                android:inputType="text"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/em_phnum"
                android:layout_marginTop="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numbers"
<<<<<<< HEAD
                android:id="@+id/et_emergency_phone"
=======
<<<<<<< HEAD
=======
                android:id="@+id/et_emergency_phone"
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
>>>>>>> main
                android:inputType="phone"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relation"
                android:layout_marginTop="8dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_spinner"
<<<<<<< HEAD
                android:id="@+id/spinner_relation"
=======
<<<<<<< HEAD
=======
                android:id="@+id/spinner_relation"
>>>>>>> 96c59b5eab8476db8d10d2dc6d81d4378ea18674
>>>>>>> main
                android:entries="@array/relationship_list" />
        </LinearLayout>

        <!-- 완료 버튼 -->
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/layout_emergency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
