<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- 안내 문구 -->
        <TextView
            android:id="@+id/tv_intro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 네이비 제목 바 -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#001F54"
            android:padding="12dp"
            android:text="@string/input_user_info"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_intro" />

        <!-- 사용자 정보 입력 -->
        <LinearLayout
            android:id="@+id/layout_user_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- 이름 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="#800020"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/plain_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_user_name"

                android:inputType="text"
                android:minHeight="48dp" />

            <!-- 전화번호 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_phnum"
                android:textColor="#800020"
                android:layout_marginTop="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/phone_text_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:hint="@string/numbers"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:minHeight="48dp" />


            </LinearLayout>





        </LinearLayout>

        <!-- 긴급 연락처 입력 -->


        <!-- 완료 버튼 -->
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:layout_marginTop="24dp"
            style="@style/PrimaryButton"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/layout_user_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
